404,500エラーのビューを変更

--- a/public/500.en.html
+++ b/public/500.en.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>404 Page Not Found</title>
+    <title>500 Internal Server Error</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <style>
       @media screen and (min-width: 576px){
@@ -89,11 +89,11 @@
     <hr class='hr mt'>
     <div class='wrapper'>
       <div class='inner_left'>
-        <img src='/404.png' class='image'>
+        <img src='/500.png' class='image'>
       </div>
       <div class='inner_right'>
-        <p>お探しのページは見つかりませんでした。</p>
-        <p>ページが削除または移動されたか、URLが間違っている可能性があります。</p>
+        <p>We're sorry, but something went wrong.</p>
+        <p>If you are the application owner check the logs for more information.</p>
       </div>
     </div>
     <hr class='hr'>
