--- a/public/404.en.html
+++ b/public/404.en.html
@@ -92,8 +92,8 @@
         <img src='/404.png' class='image'>
       </div>
       <div class='inner_right'>
-        <p>お探しのページは見つかりませんでした。</p>
-        <p>ページが削除または移動されたか、URLが間違っている可能性があります。</p>
+        <p>The page you were looking for doesn't exist.</p>
+        <p>You may have mistyped the address or the page may have moved.</p>
       </div>
     </div>
     <hr class='hr'>
